# QRun

./: .gitignore  CMakeLists.txt  qml.qrc  remotebuild.sh  shell.nix
qml/: Main.qml  Running.qml
src/: main.cpp  mockpositionupdater.cpp  mockpositionupdater.h  positionupdater.cpp  positionupdater.h  run.cpp  run.h  runbackend.cpp  runbackend.h
